fixed whitespace bug, added breakpoint to center nameBanner content at 400 pixels

--- a/src/components/nameBanner/nameBanner.css
+++ b/src/components/nameBanner/nameBanner.css
@@ -3,7 +3,6 @@
   margin-bottom: 3%;
   background-color: #f9f9f9;
   padding-left: 21%;
-  width: 100%;
 }
 
 .nameBanner img {
@@ -21,5 +20,11 @@
 
   .nameBanner img {
     padding-top: 2%;
+  }
+}
+
+@media (max-width: 400px) {
+  .nameBanner {
+    padding-left: 18.75%;
   }
 }
